Add route-roule filter
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22444

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -738,3 +738,7 @@ input.ui-grid-filter-input[type="text"] {
     border-radius: 0px;
     font-size:12px;
 }
+/*.vr-container{
+    overflow-x: hidden;
+    padding: 0px 6px 0px 15px;
+}*/
