--- a/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
+++ b/TOneV2/Code/TOneV2/TOne.Web/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
     </nav>
     <div id="wrapper" ng-style="toogled==true?{'padding-left':'225px'}:{'padding-left':'5px'}">
         <!-- Sidebar -->
-        <div id="sidebar-wrapper" ng-style="toogled==true?{'width':'250px'}:{'width':'30px'}">
+        <div id="sidebar-wrapper" ng-style="toogled==true?{'width':'250px'}:{'width':'2px'}">
 
             <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" ng-show="toogled==true">
                 <div class="panel panel-default toggle-panel ">
@@ -89,7 +89,7 @@
                         </li>
                         <li role="presentation" class="innerlist" ng-repeat="c in item.childs">
 
-                            <a ng-href="{{c.location}}">{{c.name}}</a>
+                            <a ng-href="{{c.location}}" ng-click="setActiveClass(null,item , c)">{{c.name}}</a>
                         </li>
                     </ul>
                 </div>
@@ -102,9 +102,9 @@
         <!-- /#sidebar-wrapper -->
         <!-- Page Content -->
         <div id="page-content-wrapper">
-            <div class="container-fluid">
+            <div class="container-fluid vr-container">
                 <div class="row">
-                    <div class="col-lg-12" >
+                    <div class="col-lg-12">
                         <ol class="breadcrumb breadcrumb-vr">
                             <li><a href="#/default">Home</a></li>
                             <li ng-show="parent!=null"><a href="">{{parent.name}}</a></li>
@@ -113,7 +113,7 @@
 
                     </div>
 
-                    <div class="col-lg-12"  ng-view>
+                    <div class="col-lg-12" ng-view>
 
 
                     </div>
