--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
@@ -32,10 +32,10 @@
         </vr-actionbar>
     </vr-row>
     <vr-row>
-        <vr-columns colnum="6">
+        <vr-columns colnum="6" simplecol>
             <vr-chart data-on-ready="chartTopDestinationsReady"></vr-chart>
         </vr-columns>
-        <vr-columns colnum="5">
+        <vr-columns colnum="6" simplecol>
             <vr-chart data-on-ready="chartZoneReady"></vr-chart>
         </vr-columns>
     </vr-row>
