--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
@@ -26,15 +26,26 @@
             </div>
         </vr-actionbar>
     </vr-row>
-    <vr-row>
+    <vr-row >
         <vr-columns colnum="12">
-            <vr-chart data-on-ready="chartSaleCostProfitReady"></vr-chart>
+            <div class="panel-primary panel-vr">
+                <div class="panel-heading">Sale / Cost / Profit</div>
+                <div class="panel-body">
+                    <vr-chart data-on-ready="chartSaleCostProfitReady"></vr-chart>
+                </div>
+            </div>
+           
         </vr-columns>
     </vr-row>
 
-    <vr-row class="row style-row">
+    <vr-row >
         <vr-columns colnum="12">
-            <vr-chart data-on-ready="chartProfitReady"></vr-chart>
+            <div class="panel-primary panel-vr">
+                <div class="panel-heading">Profit</div>
+                <div class="panel-body">
+                    <vr-chart data-on-ready="chartProfitReady"></vr-chart>
+                </div>
+            </div>
         </vr-columns>
     </vr-row>
 </vr-panel>
