--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PriorityTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/PriorityTemplate.html
@@ -1,7 +1,8 @@
 ﻿<div ng-controller="PriorityController">
     <vr-columns colnum="2">
-        <vr-select ismultipleselection hideselectedvaluessection="true" datasource="optionsSuppliers.datasource" selectedvalues="optionsSuppliers.selectedvalues" datatextfield="Name" datavaluefield="CarrierAccountID"
-                   entityname="Suppliers"></vr-select>
+        <vr-select ismultipleselection hideselectedvaluessection="true" datasource="optionsSuppliers.datasource" 
+                   selectedvalues="optionsSuppliers.selectedvalues" datatextfield="Name" datavaluefield="CarrierAccountID"
+                   entityname="Suppliers" isrequired></vr-select>
         
     </vr-columns>
     <vr-columns colnum="4"  ng-class="optionsSuppliers.selectedvalues.length == 0 ? 'emptycol':''">
