--- a/CDRAnalysis/Vanrise.Fzero.CDRImport.BP/CDRImportProcess.xaml
+++ b/CDRAnalysis/Vanrise.Fzero.CDRImport.BP/CDRImportProcess.xaml
@@ -1,12 +1,16 @@
 ﻿<Activity mc:Ignorable="sap sap2010 sads" x:Class="Vanrise.Fzero.CDRImport.BP.CDRImportProcess"
  xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+ xmlns:mca="clr-namespace:Microsoft.CSharp.Activities;assembly=System.Activities"
  xmlns:sads="http://schemas.microsoft.com/netfx/2010/xaml/activities/debugger"
  xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation"
  xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation"
  xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib"
  xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib"
  xmlns:vfcba="clr-namespace:Vanrise.Fzero.CDRImport.BP.Arguments;assembly=Vanrise.Fzero.CDRImport.BP.Arguments"
+ xmlns:vfcba1="clr-namespace:Vanrise.Fzero.CDRImport.BP.Activities;assembly=Vanrise.Fzero.CDRImport.BP.Activities"
+ xmlns:vfce="clr-namespace:Vanrise.Fzero.CDRImport.Entities;assembly=Vanrise.Fzero.CDRImport.Entities"
+ xmlns:vq="clr-namespace:Vanrise.Queueing;assembly=Vanrise.Queueing"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="Input" Type="InArgument(vfcba:CDRImportProcessInput)" />
@@ -20,8 +24,8 @@
       <x:String>System.Data</x:String>
       <x:String>System.Linq</x:String>
       <x:String>System.Text</x:String>
-      <x:String>Vanrise.Fzero.CDRImport.Arguments</x:String>
       <x:String>Vanrise.Fzero.CDRImport.BP.Arguments</x:String>
+      <x:String>Vanrise.Queueing</x:String>
     </sco:Collection>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
@@ -37,30 +41,58 @@
       <AssemblyReference>System.Xaml</AssemblyReference>
       <AssemblyReference>System.Xml</AssemblyReference>
       <AssemblyReference>System.Xml.Linq</AssemblyReference>
-      <AssemblyReference>Vanrise.Fzero.CDRImport.Arguments</AssemblyReference>
-      <AssemblyReference>Vanrise.Fzero.CDRImport.BP.Activities</AssemblyReference>
       <AssemblyReference>Vanrise.BusinessProcess</AssemblyReference>
       <AssemblyReference>Vanrise.BusinessProcess.Entities</AssemblyReference>
+      <AssemblyReference>Vanrise.Queueing</AssemblyReference>
+      <AssemblyReference>Vanrise.Fzero.CDRImport.BP.Activities</AssemblyReference>
+      <AssemblyReference>Vanrise.Fzero.CDRImport.Business</AssemblyReference>
+      <AssemblyReference>Vanrise.Fzero.CDRImport.Entities</AssemblyReference>
+      <AssemblyReference>Vanrise.Fzero.CDRImport.BP.Arguments</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
       <AssemblyReference>Vanrise.Fzero.CDRImport.BP</AssemblyReference>
-      <AssemblyReference>Vanrise.Fzero.CDRImport.BP.Arguments</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence sap2010:WorkflowViewState.IdRef="Sequence_1">
-    <WriteLine sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="CDR Import Process Started" />
-    <sads:DebugSymbol.Symbol>dz1DOlxURlNcRlplcm9cVmFucmlzZS5GemVyby5DRFJJbXBvcnQuQlBcQ0RSSW1wb3J0UHJvY2Vzcy54YW1sAzEDNA4CAQEyBTJiAgECMkMyXwIBAw==</sads:DebugSymbol.Symbol>
+    <Sequence.Variables>
+      <Variable x:TypeArguments="vq:BaseQueue(vfce:ImportedCDRBatch)" Name="CDRQueue">
+        <Variable.Default>
+          <mca:CSharpValue x:TypeArguments="vq:BaseQueue(vfce:ImportedCDRBatch)">Vanrise.Fzero.CDRImport.Business.CDRQueueFactory.GetImportedCDRQueue("DS1")</mca:CSharpValue>
+        </Variable.Default>
+      </Variable>
+    </Sequence.Variables>
+    <WriteLine sap2010:WorkflowViewState.IdRef="WriteLine_1">
+      <InArgument x:TypeArguments="x:String">
+        <mca:CSharpValue x:TypeArguments="x:String">String.Format("Import CDR Process stared @ {0}", DateTime.Now)</mca:CSharpValue>
+      </InArgument>
+    </WriteLine>
+    <vfcba1:ImportCDRs Status="{x:Null}">
+      <vfcba1:ImportCDRs.OutputQueue>
+        <InArgument x:TypeArguments="vq:BaseQueue(vfce:ImportedCDRBatch)">
+          <mca:CSharpValue x:TypeArguments="vq:BaseQueue(vfce:ImportedCDRBatch)">CDRQueue</mca:CSharpValue>
+        </InArgument>
+      </vfcba1:ImportCDRs.OutputQueue>
+      <sap2010:WorkflowViewState.IdRef>ImportCDRs_2</sap2010:WorkflowViewState.IdRef>
+    </vfcba1:ImportCDRs>
+    <WriteLine sap2010:WorkflowViewState.IdRef="WriteLine_2">
+      <InArgument x:TypeArguments="x:String">
+        <mca:CSharpValue x:TypeArguments="x:String" xml:space="preserve">String.Format("Import CDR Process  @ {0}", DateTime.Now)</mca:CSharpValue>
+      </InArgument>
+    </WriteLine>
+    <sads:DebugSymbol.Symbol>d0NDOlxURlNcQ0RSQW5hbHlzaXNcVmFucmlzZS5GemVyby5DRFJJbXBvcnQuQlBcQ0RSSW1wb3J0UHJvY2Vzcy54YW1sCDcDUg4CAQE7CzuvAQIBAj8FQxECAQ1EBUsZAgEJTAVQEQIBBUEJQYUBAgEORwtHbAIBCk4JTpQBAgEG</sads:DebugSymbol.Symbol>
   </Sequence>
   <sap2010:WorkflowViewState.ViewStateManager>
     <sap2010:ViewStateManager>
       <sap2010:ViewStateData Id="WriteLine_1" sap:VirtualizedContainerService.HintSize="211,62" />
-      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="233,186">
+      <sap2010:ViewStateData Id="ImportCDRs_2" sap:VirtualizedContainerService.HintSize="211,22" />
+      <sap2010:ViewStateData Id="WriteLine_2" sap:VirtualizedContainerService.HintSize="211,62" />
+      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="233,350">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </sap2010:ViewStateData>
-      <sap2010:ViewStateData Id="Vanrise.Fzero.CDRImport.BP.CDRImportProcess_1" sap:VirtualizedContainerService.HintSize="273,266" />
+      <sap2010:ViewStateData Id="Vanrise.Fzero.CDRImport.BP.CDRImportProcess_1" sap:VirtualizedContainerService.HintSize="273,430" />
     </sap2010:ViewStateManager>
   </sap2010:WorkflowViewState.ViewStateManager>
 </Activity>
