--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/SeniorManagementDashboard.html
@@ -1,7 +1,7 @@
 ﻿<vr-panel>
     <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="filterSectionCollapsed=true">
         <vr-form name="filterForm">
-            <vr-row>
+            <vr-row removeline>
                 <vr-columns colnum="2">
                     <vr-label>Date Period:</vr-label>
                     <vr-dropdown datatextfield="name" datavaluefield="value"
@@ -17,6 +17,9 @@
                     <vr-dropdown datatextfield="value" datavaluefield="value"
                                  entityname="" type="standard" options="optionTopCounts"></vr-dropdown>
                 </vr-columns>
+            </vr-row>
+            <vr-row>
+
             </vr-row>
         </vr-form>
     </div>
