--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
@@ -1,7 +1,7 @@
 ﻿<vr-panel>
     <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="filterSectionCollapsed=true">
         <vr-form name="filterForm">
-            <vr-row>
+            <vr-row removeline>
 
                 <vr-columns colnum="2">
                     <vr-label>Grouped By:</vr-label>
@@ -17,6 +17,7 @@
                 </vr-columns>
 
             </vr-row>
+            <vr-row></vr-row>
         </vr-form>
     </div>
     <vr-row removeline>
@@ -26,7 +27,7 @@
             </div>
         </vr-actionbar>
     </vr-row>
-    <vr-row >
+    <vr-row>
         <vr-columns colnum="12">
             <div class="panel-primary panel-vr">
                 <div class="panel-heading">Sale / Cost / Profit</div>
@@ -34,11 +35,11 @@
                     <vr-chart data-on-ready="chartSaleCostProfitReady"></vr-chart>
                 </div>
             </div>
-           
+
         </vr-columns>
     </vr-row>
 
-    <vr-row >
+    <vr-row>
         <vr-columns colnum="12">
             <div class="panel-primary panel-vr">
                 <div class="panel-heading">Profit</div>
