--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/ZoneDashboard.html
@@ -1,59 +1,62 @@
 ﻿<vr-panel>
-    <div class="am-collapse" ng-hide="filterSectionCollapsed">
+    <div class="am-collapse" ng-hide="filterSectionCollapsed" ng-init="filterSectionCollapsed=true">
         <vr-form name="filterForm">
-            <vr-row>
+            <vr-row removeline>
 
                 <vr-columns colnum="2">
                     <label class="control-label">Measure:</label>
                     <vr-dropdown datatextfield="name" datavaluefield="value"
-                                 entityname="" type="standard" options="optionsMeasureTypes" onselectionchange="filterChanged"></vr-dropdown>
+                                 entityname="" type="standard" options="optionsMeasureTypes"></vr-dropdown>
                 </vr-columns>
 
                 <vr-columns colnum="2">
-                    <vr-datetimepicker type="date" value="fromDate" label="From:" onvaluechanged="filterChanged"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" value="fromDate" label="From:"></vr-datetimepicker>
                 </vr-columns>
 
                 <vr-columns colnum="2">
-                    <vr-datetimepicker type="date" value="toDate" label="To:" onvaluechanged="filterChanged"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" value="toDate" label="To:"></vr-datetimepicker>
                 </vr-columns>
 
                 <vr-columns>
                     <label class="control-label">Top:</label>
                     <vr-dropdown datatextfield="name" datavaluefield="value"
-                                 entityname="" type="standard" options="optionsTopCount" onselectionchange="filterChanged"></vr-dropdown>
+                                 entityname="" type="standard" options="optionsTopCount"></vr-dropdown>
                 </vr-columns>
+            </vr-row>
+            <vr-row>
+
             </vr-row>
         </vr-form>
     </div>
 
     <vr-row removeline>
-        <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-
+        <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">           
+            <div transclude-to="buttons">
+                <vr-button type="Search" formname="formFilter" data-onclick="updateData" isasynchronous=" true"></vr-button>
+            </div>
         </vr-actionbar>
     </vr-row>
     <vr-row>
         <vr-columns colnum="6" simplecol>
-            <vr-chart data-on-ready="chartTopDestinationsReady"></vr-chart>
+            <div class="panel-primary panel-vr">
+                <div class="panel-heading">Top Destinations</div>
+                <div class="panel-body">
+                    <vr-chart data-on-ready="chartTopDestinationsReady"></vr-chart>
+                </div>
+            </div>
         </vr-columns>
         <vr-columns colnum="6" simplecol>
-            <vr-chart data-on-ready="chartZoneReady"></vr-chart>
+            <div class="panel-primary panel-vr">
+                <div class="panel-heading">Destination Measures</div>
+                <div class="panel-body">
+                    <vr-chart data-on-ready="chartZoneReady"></vr-chart>
+                </div>
+            </div>
         </vr-columns>
     </vr-row>
     <vr-row>
-        <table>
-            <thead>
-                <tr>
-                    <th style="width:250px">Zone Name</th>
-                    <th style="width:150px" ng-repeat="header in otherMeasuresDescriptions"> {{header}}</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="dataItem in topDestinationData">
-                    <td> {{dataItem.EntityName}}</td>
-                    <td ng-repeat="value in dataItem.Values track by $index">{{value | number:2}}</td>
-                </tr>
-            </tbody>
-
-        </table>
-    </vr-row>    
+        <vr-columns colnum="12">
+            <vr-datagrid data-on-ready="gridMainReady"></vr-datagrid>
+        </vr-columns>
+    </vr-row>
 </vr-panel>
