--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Reports/ZoneDetails.html
@@ -7,7 +7,7 @@
     </vr-row>
     <div class="am-collapse" ng-hide="filterSectionCollapsed">
         <vr-form name="formFilter">
-            <vr-row>
+            <vr-row removeline>
                 <vr-columns colnum="2">
                     <vr-label>Zone:</vr-label>
                     <vr-dropdown type="ondemand" options="zonesOption" datatextfield="Name" datavaluefield="ZoneId"
@@ -28,6 +28,7 @@
                 </vr-columns>
 
             </vr-row>
+            <vr-row></vr-row>
         </vr-form>
     </div>
     <vr-row removeline>
