--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/NOC/Views/Traffic Statistics/ZoneMonitor.html
@@ -30,16 +30,17 @@
             </vr-row>
             <vr-row></vr-row>
         </div>
-    </vr-form>
-    <vr-row removeline>
-        <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-            <div transclude-to="buttons">
-                <vr-button type="Search" formname="formFilter" data-onclick="getData" isasynchronous=" true" isdisabled="formState.gettingDataDisabled"></vr-button>
-                <vr-button type="Reset"></vr-button>
-            </div>
-        </vr-actionbar>
-    </vr-row>
 
+        <vr-row removeline>
+            <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+                
+                <div transclude-to="buttons">
+                    <vr-button type="Search" formname="formFilter" data-onclick="getData" isasynchronous=" true" isdisabled="formState.gettingDataDisabled"></vr-button>
+                    <vr-button type="Reset"></vr-button>
+                </div>
+            </vr-actionbar>
+        </vr-row>
+    </vr-form>
     <div ng-show="showResult">
         <vr-row>
             <vr-columns colnum="7" simplecol>
@@ -68,36 +69,43 @@
                 </div>
             </vr-columns>
         </vr-row>
-        <div ng-class="{'disabledbutton': formState.gettingDataDisabled}">
-            <vr-form name="formNavigation">
-                <vr-row>
-                    
-                    <vr-columns colnum="3">
-                        <vr-label style="padding-top:3px">
-                            Items per Page:
-                        </vr-label>
-                        <vr-select datasource="topCounts" selectedvalues="selectedTopCount" data-onselectionchanged="pageChanged"></vr-select>
-                    </vr-columns>
-                    <vr-columns>
-
-                    </vr-columns>
-
-                    <vr-columns colnum="5">
-                        <pagination total-items="totalDataCount" ng-model="currentPage" max-size="5" class="pagination-sm" num-pages="numberOfPages"
-                                    items-per-page="selectedTopCount" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>
-                    </vr-columns>
-                </vr-row>
-            </vr-form>
-        </div>
-
         <vr-row>
             <vr-columns colnum="12">
                 <vr-datagrid data-on-ready="onMainGridReady"></vr-datagrid>
             </vr-columns>
-            <vr-label style="float:right;margin-right:25px">
+            <!--<vr-label style="float:right;margin-right:25px">
                 Page {{currentPage}} of {{numberOfPages}}
-            </vr-label>
+            </vr-label>-->
         </vr-row>
+        <div ng-class="{'disabledbutton': formState.gettingDataDisabled}">
+            <vr-form name="formNavigation">
+                <vr-row>
+                    <vr-columns colnum="2" simplecol>
+                        <vr-label style="float: left; margin-top: 4px">
+                            <span style=" ">Page Size: </span>
+                        </vr-label>
+                        <div style="float: left; ">
+                            <vr-select datasource="topCounts" selectedvalues="selectedTopCount" data-onselectionchanged="pageChanged" nocaret noborder></vr-select>
+                        </div>
+                       
+                        
+                    </vr-columns>
+                    <vr-columns colnum="8" simplecol>
+                        <div style=" margin-top: 4px;text-align:center ">
+                            <pagination total-items="totalDataCount" ng-model="currentPage" max-size="10" class="pagination-sm" num-pages="numberOfPages"
+                                        items-per-page="selectedTopCount" direction-links="true" boundary-links="true" rotate="false" ng-change="pageChanged()"></pagination>
+                        </div>
+                    </vr-columns>
+                        <vr-columns colnum="2" simplecol>
+                            <vr-label style="float:right; margin-top: 4px">
+                                <span style="">Page {{currentPage}} of {{numberOfPages}}</span>
+                            </vr-label>
+                        </vr-columns>
+</vr-row>
+            </vr-form>
+        </div>
+
+       
     </div>
 </vr-panel>
 <style>
@@ -109,7 +117,12 @@
         pointer-events: none;
         opacity: 0.1;
     }
-</style>
 
+    .pagination > li > a, .pagination > li > span {
+        background-color: transparent;
+        border: none;
+        /*color: #FFF;*/
+    }
+</style>
 
 
