--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Views/Routing/RouteRuleManager.html
@@ -2,7 +2,7 @@
 <vr-panel>
     <vr-row>
 
-        <form>
+        <form ng-hide="filterSectionCollapsed">
             <vr-columns colnum="3">
                 <label>Type</label>
                 <vr-select ismultipleselection hideselectedvaluessection="true" datatextfield="name" datavaluefield="objectType"
@@ -16,22 +16,9 @@
                 </vr-select>
             </vr-columns>
             <vr-columns colnum="3">
-                <!--<div class="dropdown option-filter" id="optionddl">
-                    <label class="dropdown-toggle hand-cursor" id="dropdownMenuOptions" data-toggle="dropdown" aria-expanded="true" ng-init="option=1" ng-model='option'>
-                        By {{option == 1 ? "  Zones " : " Code "}}
-                    </label>
-                    <ul class="dropdown-menu dropdown-menu-custom " role="menu" aria-labelledby="dropdownMenuOptions">
-                        <li role="presentation" ng-show="option != 1">
-                            <label class="item-menu hand-cursor" ng-click="option = 1">Zones</label>
-                        </li>
-                        <li role="presentation" ng-show="option != 2">
-                            <label class="item-menu hand-cursor" ng-click="option = 2">Code</label>
-                        </li>
-                    </ul>
-                </div>-->
                 <div class="btn-group btn-group-custom" role="group" ng-init="option=1">
-                    <label  class="hand-cursor" ng-class="option == 1?'clicked-btn':''" ng-click="option = 1">By Zones</label>
-                    <label >|</label>
+                    <label class="hand-cursor" ng-class="option == 1?'clicked-btn':''" ng-click="option = 1">By Zones</label>
+                    <label>|</label>
                     <label class="hand-cursor" ng-class="option == 2?'clicked-btn':''" ng-click="option = 2">By Code</label>
                 </div>
 
@@ -43,53 +30,55 @@
 
             </vr-columns>
 
-
-
-            <!--<button ng-click="getDatalistFilterd()" class="btn btn-default">Search</button>-->
         </form>
 
     </vr-row>
-    <vr-row>
-        <div class="action-bar">
-            <div class="btn-group action-bar-left">
-                <label class="action-bar-label" ng-show="showHis==false">Visible Rows:</label>
-                <div class="dropdown action-bar-ddl" ng-show="showHis==false">
-                    <label class=" dropdown-toggle hand-cursor action-bar-ddl-label" id="dropdownCount" data-toggle="dropdown" aria-expanded="true">
-                        <span class="no-margin">{{numberoflines}}</span>
-                    </label>
-                    <ul class="dropdown-menu action-bar-ddl-ul" role="menu" aria-labelledby="dropdownCount" ng-mouseenter="muteaction($event);">
-                        <li role="presentation">
-                            <div class="mark-select action-bar-ddl-item" ng-click="divStyleChange(10)" ng-mouseenter="muteaction($event);">
-                                <div class="hand-cursor action-bar-ddl-inner-item">10</div>
-                            </div>
-                            <div class="mark-select action-bar-ddl-item" ng-click="divStyleChange(20)" ng-mouseenter="muteaction($event);">
-                                <div class="hand-cursor action-bar-ddl-inner-item">20</div>
-                            </div>
-                        </li>
-                    </ul>
+    <vr-row removeline>
+        <vr-columns colnum="12" nopadding nomargin>
+
+            <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+                <div transclude-to="leftSection">
+                    <label class="action-bar-label" ng-show="showHis==false">Visible Rows:</label>
+                    <div class="dropdown action-bar-ddl" ng-show="showHis==false">
+                        <label class=" dropdown-toggle hand-cursor action-bar-ddl-label" id="dropdownCount" data-toggle="dropdown" aria-expanded="true">
+                            <span class="no-margin">{{numberoflines}}</span>
+                        </label>
+                        <ul class="dropdown-menu action-bar-ddl-ul" role="menu" aria-labelledby="dropdownCount" ng-mouseenter="muteaction($event);">
+                            <li role="presentation">
+                                <div class="mark-select action-bar-ddl-item" ng-click="divStyleChange(10)" ng-mouseenter="muteaction($event);">
+                                    <div class="hand-cursor action-bar-ddl-inner-item">10</div>
+                                </div>
+                                <div class="mark-select action-bar-ddl-item" ng-click="divStyleChange(20)" ng-mouseenter="muteaction($event);">
+                                    <div class="hand-cursor action-bar-ddl-inner-item">20</div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="btn btn-default btncustom action-bar-btn-icon" ng-show="showHis==false" ng-class="gridOptionsRouteRule.enableFiltering==true?'':'toggle-Icon'" type="button" aria-label="Left Align" ng-click="toggelFilter()"><span style="padding-left:4px" class="glyphicon glyphicon glyphicon glyphicon-zoom-in" aria-hidden="true"></span></button>
                 </div>
-                <button class="btn btn-default btncustom action-bar-btn-icon" ng-show="showHis==false" ng-class="gridOptionsRouteRule.enableFiltering==true?'':'toggle-Icon'" type="button" aria-label="Left Align" ng-click="toggelFilter()"><span style="padding-left:4px" class="glyphicon glyphicon glyphicon glyphicon-zoom-in" aria-hidden="true"></span></button>
+                <div transclude-to="buttons">
+                    <button type="button" class="btn btn-default btncustom  action-bar-btn-icon  highlight-btn " ng-if="gridOptionsHistory.data.length > 0 " ng-click="switchGrids()" aria-label="Left Align">
+                        <span ng-show="showHis==false">
+                            {{gridOptionsHistory.data.length}} Updated Rule(s)
+                            <span style="padding-left:4px" class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                        </span>
+                        <span ng-show="showHis==true">
+                            Main View
+                            <span style="padding-left:4px" class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+                        </span>
+                    </button>
 
+                    <button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewRoute()">Add<span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>
 
-            </div>
-            <div class="btn-group action-bar-right">
-                <button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float " ng-class=" showHis== true ? 'highlight-btn':''" ng-show="gridOptionsHistory.data.length > 0" ng-click="switchGrids()" aria-label="Left Align">
-                    <span ng-show="showHis==false">
-                        {{gridOptionsHistory.data.length}} Updated Rule(s)
-                        <span style="padding-left:4px" class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
-                    </span>
-                    <span ng-show="showHis==true">
-                        Main View
-                        <span style="padding-left:4px" class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
-                    </span>
-                </button>
-                <button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewRoute()">Add<span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>
+                    <vr-button type="Search" data-onclick="getDatalistFilterd"></vr-button>
+                    <vr-button type="Reset" data-onclick="resetDatalistFilterd"></vr-button>
 
-                <vr-button type="Search" data-onclick="getDatalistFilterd"  ></vr-button>
-
-            </div>
-        </div>
-
+                </div>
+            </vr-actionbar>
+            
+        </vr-columns>
+    </vr-row>
+    <vr-row>
         <vr-columns colnum="12" nopadding nomargin class="am-fade" ng-show="showMain==true">
 
             <div class="loader" ng-show="isloadingdata">
@@ -101,11 +90,11 @@
             </div>
 
         </vr-columns>
-        <vr-columns colnum="12" nopadding nomargin >
+        <vr-columns colnum="12" nopadding nomargin>
 
             <div ui-grid="gridOptionsHistory" ng-if="showHis">
             </div>
-            
+
         </vr-columns>
     </vr-row>
 </vr-panel>
