--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/CustomerTemplate.html
@@ -3,7 +3,7 @@
         <div class="dropdown dropdown-custom " id="dropdownMenuddl">
             <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" ng-style="carrierAccountSelectionOption==2?{'color':'#D44A47'}:''" type="button" id="dropdownMenuCu" data-toggle="dropdown" aria-expanded="true" ng-model='carrierAccountSelectionOption'>
                 {{carrierAccountSelectionOption == 1 ? "  Customers: " : "  All Customers Except:"}}
-                <span class="caret-rigth indicator"></span>
+                <span class="caret-rigth-sm indicator"></span>
             </label>
             <ul class="dropdown-menu dropdown-menu-custom dropdown-menu-label" role="menu" aria-labelledby="dropdownMenuCu">
                 <li role="presentation" ng-show="carrierAccountSelectionOption != 1">
