--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ZoneTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/PartialTemplate/ZoneTemplate.html
@@ -3,7 +3,7 @@
         <div class="dropdown dropdown-custom" id="Zoneddl">
             <label class="dropdown-toggle hand-cursor" style="padding-top: 6px" ng-style="zoneSelectionOption==2?{'color':'#D44A47'}:''" id="dropdownMenuZo" data-toggle="dropdown" aria-expanded="true" ng-model='zoneSelectionOption'>
                 {{zoneSelectionOption == 1 ? "  Zones: " : "  All Zones Except:"}}
-                <span class="caret-rigth indicator"></span>
+                <span class="caret-rigth-sm indicator"></span>
             </label>
             <ul class="dropdown-menu dropdown-menu-custom dropdown-menu-label" role="menu" aria-labelledby="dropdownMenuZo">
                 <li role="presentation" ng-show="zoneSelectionOption != 1">
@@ -16,7 +16,7 @@
         </div>
     </vr-columns>
     <vr-columns colnum="2">
-        <vr-select ismultipleselection datasource="searchZones" selectedvalues="optionsZones.selectedvalues" datatextfield="Name" datavaluefield="ZoneId"
+        <vr-select ismultipleselection isrequired datasource="searchZones" selectedvalues="optionsZones.selectedvalues" datatextfield="Name" datavaluefield="ZoneId"
                    entityname="Zones"></vr-select>
 
     </vr-columns>
