--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-select.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Templates/Directives/vr-select.html
@@ -25,14 +25,14 @@
 
                         <div ng-if="ctrl.isMultiple()" style="overflow: auto; margin-top: 5px" ng-class="ctrl.isEnFilter()? 'with-filter' : 'no-filter'">
                             <div class="mark-select " ng-click="ctrl.selectValue($event, c); " ng-repeat="c in ctrl.getdatasource() | filter:ctrl.filtername"
-                                 style="display: block; padding: 3px 2px 0px 2px; margin: 2px; white-space: normal;" ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
+                                 style="display: block; padding: 3px 2px 0px 2px; white-space: normal;" ng-class="ctrl.findExsite(c) > -1 ?'selected':'' ">
                                 <div class="hand-cursor" style="display: inline-block; width:170px; white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ ctrl.getObjectText(c)}}</div>
                                 <div style="float:right" ng-show="ctrl.findExsite(c) > -1">✔</div>
                             </div>
                         </div>
 
                         <div ng-if="!ctrl.isMultiple()" ng-repeat="c in ctrl.getdatasource()" class="mark-select " ng-click="ctrl.selectValue($event, c);" 
-                             style="display: block;padding:2px; margin:2px; white-space: normal;">
+                             style="display: block; padding: 2px;border: 1px solid #AAA0A0 !important; white-space: normal;">
                             <div class="hand-cursor" style="display: table-cell;  white-space: nowrap; text-overflow: ellipsis; overflow:hidden">{{ctrl.getObjectText(c)}}</div>
                         </div>
 
