--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Styles/Styles.css
@@ -117,7 +117,7 @@ Use this for keyframe animations
     transition: background-color 0.2s ease 0s, box-shadow 0.2s ease 0s, border-color 0.2s ease 0s;
     box-shadow: none;
 }
-.selected:first-child{
+.selected:first-of-type {
     background-color: #D0D0D0  !important;
     border-top: 1px solid #AAA0A0 !important;
     border-bottom: 0px solid #AAA0A0 !important;
@@ -129,7 +129,7 @@ Use this for keyframe animations
     border-top: 1px solid #AAA0A0 !important;
     border-bottom: 1px solid #AAA0A0 !important;
 }
-.selected:last-child{
+.selected:last-of-type{
     background-color: #D0D0D0  !important;
     border-top: 0px solid #AAA0A0 !important;
     border-bottom: 1px solid #AAA0A0 !important;
