Route Rule and DataGrid enhancement
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22545

--- a/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.Web/Client/Modules/BI/Views/Dashboards/TopManagementDashboard.html
@@ -28,7 +28,7 @@
         </vr-actionbar>
     </vr-row>
     <vr-row>
-        <vr-columns colnum="12">
+        <vr-columns colnum="12" simplecol>
             <div class="panel-primary panel-vr">
                 <div class="panel-heading">Sale / Cost / Profit</div>
                 <div class="panel-body">
@@ -40,7 +40,7 @@
     </vr-row>
 
     <vr-row>
-        <vr-columns colnum="12">
+        <vr-columns colnum="12" simplecol>
             <div class="panel-primary panel-vr">
                 <div class="panel-heading">Profit</div>
                 <div class="panel-body">
